--- a/paper.tex
+++ b/paper.tex
@@ -6,10 +6,14 @@
 \author{Dalton Kajander, Shawn Guydeene, Blake Lastname}
 \title{Concurrent Hash Tables in Java}
 \date{\today{}}
-
 \maketitle
 
+\newpage
+\tableofcontents
+\newpage
 
+\section{Source code}
+\subsection{Java code}
 \begin{lstlisting}[language={Java},caption=Testing surce code in \LaTeX{}.,breaklines=true,frame=single]
 class HashTableCon {
     public static void main(String[] args) {
@@ -17,5 +21,7 @@ class HashTableCon {
     }
 }
 \end{lstlisting}
+\subsection{Reasoning}
+Because I said so, that's why. 
 
 \end{document}
