Project Description and Requirements page

--- a/paper.tex
+++ b/paper.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 
 \usepackage{listings}
+\usepackage{hyperref}
 
 \begin{document}
 \author{Dalton Kajander, Shawn Guydeene, Blake Lastname}
@@ -41,5 +42,27 @@ class HashTable<T> {
 
 \section{Experimental Results}
 Well, it worked on my machine. 
+
+
+
+\newpage
+\section{Description and Requirements}
+The purpose of the project is to give you a chance to explore in some depth a topic that is related to the subject matter of this course. The project consists of two parts, an activity and a report. Your final report must present original work on a challenging problem.
+\begin{enumerate}
+    \item The activity involves scholarly work—exploring a topic, reading relevant literature, writing software, and running experiments—and must include either a substantial amount of programming or a strong theoretical mathematical treaty of issues related to multicore programming.
+    \item The final report is a short paper (6–10 pages) describing the results of the activity and should reflect the substantial amount of work that you put into the activity. The paper should make clear what is the problem, the state-of-the art in this research area, a discussion of related work, a clear definition of the contributions of your paper, a detailed discussion of your algorithms and approach and their application, and performed experimental results. The report will be graded for writing quality as well as for technical content, so attention should be paid to organization, grammar, spelling, and scholarly style. All references used, both text and code, must be properly cited in the bibliography. Your are required to use LaTeX (\url{http://en.wikipedia.org/wiki/LaTeX} (Links to an external site.)) to prepare your report.
+    \item Source code: typically in the course of your research you will develop source code for your algorithms and experimental results. Please include with your mid-term and final reports the following:
+    \begin{enumerate}
+        \item The source code of your algorithms along with a brief README file
+        \item The source code of your experiments along with a brief README file
+        \item The source code of your paper (in a LaTeX format).
+    \end{enumerate}
+\end{enumerate}
+\textit{Submission} \\
+All materials should be submitted online using Webcourses as a single zip or rar archive. \\
+\textit{Format} \\
+All papers should follow either the ACM or the IEEE Manuscript Format. \\
+A sample IEEE template and further formatting instructions are available here: \\
+\url{http://www.ieee.org/conferences_events/conferences/publishing/templates.html}
 
 \end{document}
