Added Last Name

--- a/paper.tex
+++ b/paper.tex
@@ -4,7 +4,7 @@
 \usepackage{hyperref}
 
 \begin{document}
-\author{Dalton Kajander, Shawn Guydeene, Blake Lastname}
+\author{Dalton Kajander, Shawn Guydeene, Blake Celestian}
 \title{Concurrent Hash Tables in Java}
 \date{\today{}}
 \maketitle
