Conversion to IEEE formatting

--- a/paper.tex
+++ b/paper.tex
@@ -1,20 +1,38 @@
-\documentclass{article}
+\documentclass[conference]{IEEEtran}
+\IEEEoverridecommandlockouts
 
 \usepackage{listings}
 \usepackage{hyperref}
-
+\usepackage{cite}
+\usepackage{amsmath,amssymb,amsfonts}
+\usepackage{algorithmic}
+\usepackage{graphicx}
+\usepackage{textcomp}
+\usepackage{xcolor}
+\def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
+    T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \begin{document}
-\author{Dalton Kajander, Shawn Guydeene, Blake Lastname}
-\title{Concurrent Hash Tables in Java}
-\date{\today{}}
+\title{A Look at Implementing Councurrent Hash Tables in Java}
+
+\author{\IEEEauthorblockN{ Shawn Guydeene}
+\and
+\IEEEauthorblockN{ Dalton Kajander}
+\and
+\IEEEauthorblockN{ Blake Celestian}
+}
+
 \maketitle
 
-\newpage
-\tableofcontents
-\newpage
+\begin{abstract}
+Abstract goes here.
+\end{abstract}
+
+\begin{IEEEkeywords}
+Concurrent Programming, Hash-table representations
+\end{IEEEkeywords}
 
 \section{The Problem}
-What problem?
+Our group looked into the creation of hash tables in Java, and how one would be able to 
 
 \section{Research}
 Oh, that problem.
