--- a/paper.tex
+++ b/paper.tex
@@ -3,16 +3,10 @@
 
 \usepackage{listings}
 \usepackage{hyperref}
-\usepackage{cite}
-\usepackage{amsmath,amssymb,amsfonts}
-\usepackage{algorithmic}
-\usepackage{graphicx}
-\usepackage{textcomp}
-\usepackage{xcolor}
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \begin{document}
-\title{A Look at Implementing Councurrent Hash Tables in Java}
+\title{An Implementation of Councurrent Hash Tables in Java}
 
 \author{\IEEEauthorblockN{ Shawn Guydeene}
 \and
@@ -31,8 +25,11 @@ Abstract goes here.
 Concurrent Programming, Hash-table representations
 \end{IEEEkeywords}
 
-\section{The Problem}
-Our group looked into the creation of hash tables in Java, and how one would be able to 
+\section{Introduction}
+The problem that our group chose to tackle, is how one would parallelize a hash table, and see how much of a performance increase,
+if any would arise from such an implementation. This paper seeks to explain the how hash tables function as a data structure, previous
+attempts at parallelizing them, our group's attempt at creating a concurrent hash table, and experimental data collected showing the
+effects of parallelizing on runtime for the program.
 
 \section{Research}
 Oh, that problem.
@@ -61,26 +58,13 @@ class HashTable<T> {
 \section{Experimental Results}
 Well, it worked on my machine. 
 
-
-
-\newpage
-\section{Description and Requirements}
-The purpose of the project is to give you a chance to explore in some depth a topic that is related to the subject matter of this course. The project consists of two parts, an activity and a report. Your final report must present original work on a challenging problem.
-\begin{enumerate}
-    \item The activity involves scholarly work—exploring a topic, reading relevant literature, writing software, and running experiments—and must include either a substantial amount of programming or a strong theoretical mathematical treaty of issues related to multicore programming.
-    \item The final report is a short paper (6-10 pages) describing the results of the activity and should reflect the substantial amount of work that you put into the activity. The paper should make clear what is the problem, the state-of-the art in this research area, a discussion of related work, a clear definition of the contributions of your paper, a detailed discussion of your algorithms and approach and their application, and performed experimental results. The report will be graded for writing quality as well as for technical content, so attention should be paid to organization, grammar, spelling, and scholarly style. All references used, both text and code, must be properly cited in the bibliography. Your are required to use LaTeX (\url{http://en.wikipedia.org/wiki/LaTeX} (Links to an external site.)) to prepare your report.
-    \item Source code: typically in the course of your research you will develop source code for your algorithms and experimental results. Please include with your mid-term and final reports the following:
-    \begin{enumerate}
-        \item The source code of your algorithms along with a brief README file
-        \item The source code of your experiments along with a brief README file
-        \item The source code of your paper (in a LaTeX format).
-    \end{enumerate}
-\end{enumerate}
-\textit{Submission} \\
-All materials should be submitted online using Webcourses as a single zip or rar archive. \\
-\textit{Format} \\
-All papers should follow either the ACM or the IEEE Manuscript Format. \\
-A sample IEEE template and further formatting instructions are available here: \\
-\url{http://www.ieee.org/conferences_events/conferences/publishing/templates.html}
-
+\begin{thebibliography}{00}
+\bibitem{b1} G. Eason, B. Noble, and I. N. Sneddon, ``On certain integrals of Lipschitz-Hankel type involving products of Bessel functions,'' Phil. Trans. Roy. Soc. London, vol. A247, pp. 529--551, April 1955.
+\bibitem{b2} J. Clerk Maxwell, A Treatise on Electricity and Magnetism, 3rd ed., vol. 2. Oxford: Clarendon, 1892, pp.68--73.
+\bibitem{b3} I. S. Jacobs and C. P. Bean, ``Fine particles, thin films and exchange anisotropy,'' in Magnetism, vol. III, G. T. Rado and H. Suhl, Eds. New York: Academic, 1963, pp. 271--350.
+\bibitem{b4} K. Elissa, ``Title of paper if known,'' unpublished.
+\bibitem{b5} R. Nicole, ``Title of paper with only first word capitalized,'' J. Name Stand. Abbrev., in press.
+\bibitem{b6} Y. Yorozu, M. Hirano, K. Oka, and Y. Tagawa, ``Electron spectroscopy studies on magneto-optical media and plastic substrate interface,'' IEEE Transl. J. Magn. Japan, vol. 2, pp. 740--741, August 1987 [Digests 9th Annual Conf. Magnetics Japan, p. 301, 1982].
+\bibitem{b7} M. Young, The Technical Writer's Handbook. Mill Valley, CA: University Science, 1989.
+\end{thebibliography}
 \end{document}
